<resources>
    <string name="app_name">VT JoinMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_list">Table List</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_account">Accounts</string>
    <string name="menu_add">Add A Table</string>
    <string name="menu_detail">Table Details</string>

    <string-array name="activities">
        <item>Activity</item>
        <item>Study</item>
        <item>Dining</item>
    </string-array>

    <string-array name="envs">
        <item>Environment</item>
        <item>Quiet</item>
        <item>Casual</item>
    </string-array>

    <string-array name="buildings">
        <item>Building</item>
        <item>Agnew Hall</item>
        <item>Architecture Annex</item>
        <item>Bishop-Favrao Hall</item>
        <item>Burruss Hall</item>
        <item>Cheatham Hall</item>
        <item>Cowgill Hall</item>
        <item>Davidson Hall</item>
        <item>Derring Hall</item>
        <item>Dietrick Hall</item>
        <item>Durham Hall</item>
        <item>Engel Hall</item>
        <item>Femoyer Hall</item>
        <item>Fralin Life Science Institute</item>
        <item>Johnston Student Center</item>
        <item>Goodwin Hall</item>
        <item>Graduate Life Center</item>
        <item>Hahn Hall North</item>
        <item>Hahn Hall South</item>
        <item>Henderson Hall</item>
        <item>Holden Hall</item>
        <item>Hutcheson Hall</item>
        <item>Hancock Hall</item>
        <item>Kelly Hall</item>
        <item>Latham Hall</item>
        <item>Lavery Hall</item>
        <item>Litton-Reaves Hall</item>
        <item>Major Williams Hall</item>
        <item>McBryde Hall</item>
        <item>Media Annex</item>
        <item>Media Building</item>
        <item>Newman Library</item>
        <item>New Classroom Building</item>
        <item>Norris Hall</item>
        <item>Owens Hall</item>
        <item>Pamplin Hall</item>
        <item>Patton Hall</item>
        <item>Price Hall</item>
        <item>Randolph Hall</item>
        <item>Robeson Hall</item>
        <item>Sandy Hall</item>
        <item>Saunders Hall</item>
        <item>Seitz Hall</item>
        <item>Shanks Hall</item>
        <item>Smyth Hall</item>
        <item>Squires Student Center</item>
        <item>Steger Hall</item>
        <item>Surge Building</item>
        <item>Torgersen Hall</item>
        <item>Wallace Hall</item>
        <item>Whittemore Hall</item>
        <item>Williams Hall</item>
    </string-array>

    <string-array name="hour_dropdown">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="minute_dropdown">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="building">Building:</string>
    <string name="available_seats">Available Seats:</string>
    <string name="total_seats">Total Seats:</string>
    <string name="enter_empty_seats">Enter empty seats</string>
    <string name="enter_total_seats">Enter total seats</string>
    <string name="duration">Duration:</string>
    <string name="when_do_you_plan_to_leave">When do you plan to leave?</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="activity">Activity:</string>
    <string name="studying">Studying</string>
    <string name="dining">Dining</string>
    <string name="environment">Environment:</string>
    <string name="quiet">Quiet</string>
    <string name="casual">Casual</string>
    <string name="description">Description:</string>
    <string name="add">Add</string>
    <string name="join">Join</string>
</resources>
